[package]
name = "my_iot_platform"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A SaaS platform offering real-time analytics and monitoring for IoT devices."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1.50"
thiserror = "1.0"
tokio-stream = "0.1.7"
futures = "0.3"
uuid = "0.8"
chrono = "0.4"
tokio-tungstenite = "0.15"
tungstenite = "0.15"
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "postgres"] }
warp = "0.3"
hyper = "0.14"
tower = "0.4"
env_logger = "0.9"
log = "0.4"

[dev-dependencies]
tokio-test = "0.4"
assert-json-diff = "1.0"

[workspace]
members = [
    "ingestion_main",
    "storage_main",
    "processing_main",
    "api_main",
]

[[bin]]
name = "ingestion_main"
path = "src/ingestion_main.rs"

[[bin]]
name = "storage_main"
path = "src/storage_main.rs"

[[bin]]
name = "processing_main"
path = "src/processing_main.rs"

[[bin]]
name = "api_main"
path = "src/api_main.rs"

[features]
default = []
